# ai-generated-song-detection

./: .gitignore  PIPELINE.md  README.md  main.py  pyproject.toml
data/: download_fakemusiccaps.py  download_mippia.py  download_sonics.py  precompute_features.py  validate_datasets.py
notebooks/: 01_eda.py  02_feature_analysis.py  03_evaluation.py  create_notebooks.py
report/: report.md  report.tex
src/: compare_tracks.py  log_config.py
src/features/: audio_features.py  augmentations.py  embedding_features.py  gpu_features.py  lyrics_features.py  source_separation.py  speech_features.py  streaming.py
src/models/: chunking.py  construct_pairs.py  distill.py  evaluate.py  pair_dataset.py  pretrain.py  siamese_network.py  similarity_head.py  spectrogram_encoder.py  train.py  tune.py
tests/: test_core.py  test_downloads.py  test_integration.py
