[project]
name = "ai-audio-similarity"
version = "0.1.0"
description = "Pairwise audio similarity system for detecting AI-generated derivatives of original tracks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "kaggle>=1.6.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "soundfile>=0.12.0",
    "faiss-cpu>=1.7.0",
    "yt-dlp>=2024.1.0",
    "tqdm>=4.66.0",
    "praat-parselmouth>=0.4.0",
    "nnAudio>=0.3.0",
    "lmdb>=1.4.0",
    "mlflow>=2.10.0",
    "loguru>=0.7.0",
    "optuna>=3.5.0",
    "faster-whisper>=1.0.0",
    "sentence-transformers>=3.0.0",
    "jedi>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "umap-learn>=0.5.0",
]
demucs = ["demucs>=4.0.0"]
xeus = ["espnet>=202401"]

[project.scripts]
compare-tracks = "src.compare_tracks:main"

[tool.pytest.ini_options]
filterwarnings = [
    # librosa.estimate_tuning warns on silence/very-short synthetic test signals — expected, not a bug
    "ignore:Trying to estimate tuning from empty frequency set:UserWarning",
]
